--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "@vueuse/core": "^10.4.1",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
