--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
